made my NN a bit more generalized

--- a/NN.ipynb
+++ b/NN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,33 +43,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 1] [0.00094682] [0.00094727]\n",
-      "[0, 0] [7.85625714e-05] [7.85656576e-05]\n",
-      "[1, 0] [0.99982549] [0.00017452]\n",
-      "[0, 1] [0.9998254] [0.00017462]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class NN:\n",
-    "    def __init__(self):\n",
+    "    \n",
+    "    \n",
+    "    def __init__(self,  loss_func,loss_der, backward_func, forward_funcs, layers=2, neurons_per_layer=2, initial_x=2):\n",
     "        self.W = []\n",
-    "        W1 = np.random.randn(2, 3) * 0.1\n",
-    "        W2 = np.random.randn(1, 3) * 0.1\n",
-    "\n",
-    "        # self.X = np.ones(2)\n",
-    "        # self.v = 0\n",
-    "        self.W.append(W1)\n",
-    "        self.W.append(W2)\n",
+    "        self.layers = layers\n",
+    "        self.W.append(np.random.randn(neurons_per_layer,initial_x+1))\n",
+    "        #determin the hidden layers\n",
+    "        for layer in range(layers-2):\n",
+    "            self.W.append(np.random.randn(neurons_per_layer, neurons_per_layer+1))\n",
+    "        # Hypothetically say we only have one output from this NN\n",
+    "        self.W.append(np.random.randn(1, neurons_per_layer+1))\n",
+    "        self.loss_func = loss_func\n",
+    "        self.forward_funcs = forward_funcs\n",
+    "        self.loss_der = loss_der\n",
+    "        self.backward_func = backward_func\n",
     "\n",
     "\n",
     "    # -------------------------- forward prop\n",
-    "    def forward_prop(self,X, v, W, Funcky):\n",
+    "    def forward_prop(self,X, v, W):\n",
     "        y = []\n",
     "        z = []\n",
     "\n",
@@ -83,13 +78,14 @@
     "\n",
     "\n",
     "        for i in range(len(W)):\n",
+    "            # print(W[i].shape, y[-1].shape)\n",
     "            zi = W[i] @ y[-1]\n",
     "\n",
     "            z.append(zi)\n",
     "\n",
     "            # print(f\"z{i+1} ---> {zi}\")\n",
     "\n",
-    "            yoo = Funcky[i](zi)\n",
+    "            yoo = self.forward_funcs[i](zi)\n",
     "            if(i < len(W) - 1):\n",
     "                yoo = np.insert(yoo, 0, 1)\n",
     "\n",
@@ -98,7 +94,7 @@
     "            # print(f\"y{i+1} ---> {yoo}\")\n",
     "\n",
     "\n",
-    "        Loss = CE(y[-1], v)\n",
+    "        Loss = self.loss_func(y[-1], v)\n",
     "        # print(\"Loss --->\",Loss)\n",
     "\n",
     "        return (y,z,Loss)\n",
@@ -110,8 +106,8 @@
     "        zp = []\n",
     "        dW = []\n",
     "\n",
-    "        y2p = CEDer(y[len(W)], v)\n",
-    "        z2p = sigDer(z[len(W)-1]) * y2p\n",
+    "        y2p = self.loss_der(y[len(W)], v)\n",
+    "        z2p = self.backward_func[self.layers-1](z[len(W)-1]) * y2p\n",
     "\n",
     "        yp.append(y2p)\n",
     "        zp.append(z2p)\n",
@@ -122,7 +118,7 @@
     "        for i in range(len(W)-1):\n",
     "            yop = W[len(W)-1-i].T @ zp[-1] \n",
     "            yop = yop[1:]\n",
-    "            zop = sRelDer(z[len(W)-i-2]) * yop\n",
+    "            zop = self.backward_func[self.layers - 1 - i](z[len(W)-i-2]) * yop\n",
     "\n",
     "            yp.append(yop)\n",
     "            zp.append(zop)\n",
@@ -142,12 +138,9 @@
     "            dW.append(doW)\n",
     "\n",
     "        return dW\n",
-    "\n",
-    "\n",
-    "\n",
     "        \n",
     "\n",
-    "    def train(self, dataset, lr=0.1):\n",
+    "    def train(self, dataset, lr=0.01):\n",
     "        delta = 10000000000000000000\n",
     "        Loss = 0\n",
     "        Old_Loss = 1000000\n",
@@ -156,27 +149,46 @@
     "            \n",
     "            Old_Loss = total_loss\n",
     "            total_loss = 0\n",
+    "            dWs = []\n",
     "            for data in dataset :\n",
-    "                y,z,Loss = self.forward_prop(data[0], data[1], self.W, [sRel, sig])\n",
+    "                y,z,Loss = self.forward_prop(data[0], data[1], self.W)\n",
     "                total_loss += Loss\n",
     "                dW = self.backward_prob(self.W, y, z, data[1])\n",
-    "                for i in range(len(self.W)) : \n",
-    "                    self.W[i] -= lr * dW[i]\n",
     "                \n",
+    "                dWs.append(dW)\n",
+    "            \n",
+    "            avg_dW = []\n",
+    "            for layer in range(len(self.W)):\n",
+    "                # Get all gradients for this layer\n",
+    "                layer_gradients = [dWs[i][layer] for i in range(len(dWs))]\n",
+    "                # Calculate mean gradient for this layer\n",
+    "                layer_mean = np.mean(layer_gradients, axis=0)\n",
+    "                avg_dW.append(layer_mean)\n",
+    "\n",
+    "            for i in range(len(self.W)):\n",
+    "                self.W[i] -= lr * avg_dW[i]\n",
     "            delta = abs(Old_Loss - total_loss)\n",
     "        \n",
     "        \n",
     "    def test(self, dataset):\n",
     "        for data in dataset :\n",
-    "            y,z,Loss = self.forward_prop(data[0], data[1], self.W, [sRel, sig])\n",
+    "            y,z,Loss = self.forward_prop(data[0], data[1], self.W)\n",
     "            print(data[0],y[-1], Loss)\n",
     "\n",
     "\n",
-    "nur = NN()\n",
-    "\n",
     "dataset = [[[1,1],0], [[0,0],0], [[1,0],1], [[0,1],1]]\n",
     "\n",
-    "nur.train(dataset)\n",
+    "layers = 20\n",
+    "forward_funcs = [sRel for i in range(layers - 1)]\n",
+    "forward_funcs.append(sig)\n",
+    "\n",
+    "backward_funcs = [sRelDer for i in range(layers - 1)]\n",
+    "backward_funcs.append(sigDer)\n",
+    "\n",
+    "nur = NN(layers=layers, initial_x=len(dataset[0][0]), \n",
+    "         loss_func=CE,loss_der=CEDer, forward_funcs=forward_funcs, neurons_per_layer=10, backward_func=backward_funcs)\n",
+    "\n",
+    "nur.train(dataset, lr=0.1)\n",
     "\n",
     "nur.test(dataset)\n",
     "\n",
