added some functions

--- a/NN.ipynb
+++ b/NN.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "from tensorflow import keras"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,24 +42,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 1] [0.00023013] [0.00023016]\n",
-      "[0, 0] [7.2556812e-05] [7.25594443e-05]\n",
-      "[1, 0] [0.99993534] [6.46666291e-05]\n",
-      "[0, 1] [0.99935258] [0.00064763]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class NN:\n",
-    "    \n",
-    "    \n",
     "    def __init__(self,  loss_func,loss_der, backward_func, forward_funcs, layers=2, neurons_per_layer=2, initial_x=2):\n",
     "        self.W = []\n",
     "        self.layers = layers\n",
@@ -184,9 +172,141 @@
     "    def test(self, dataset):\n",
     "        for data in dataset :\n",
     "            y,z,Loss = self.forward_prop(data[0], data[1], self.W)\n",
-    "            print(data[0],y[-1], Loss)\n",
+    "            print(data[0],y[-1], Loss)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AND"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1] [0.99970096] [0.00029909]\n",
+      "[0, 0] [1.e-15] [9.99200722e-16]\n",
+      "[1, 0] [0.00011907] [0.00011908]\n",
+      "[0, 1] [0.00012688] [0.00012689]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = [[[1,1],1], [[0,0],0], [[1,0],0], [[0,1],0]]\n",
+    "\n",
+    "layers = 5\n",
+    "forward_funcs = [sRel for i in range(layers - 1)]\n",
+    "forward_funcs.append(sig)\n",
+    "\n",
+    "backward_funcs = [sRelDer for i in range(layers - 1)]\n",
+    "backward_funcs.append(sigDer)\n",
     "\n",
     "\n",
+    "\n",
+    "# (x_train, y_train), (x_test, y_test) = keras.datasets.mnist.load_data()\n",
+    "\n",
+    "# X_train = x_train / 255.0\n",
+    "# X_test = x_test / 255.0\n",
+    "\n",
+    "# # Reshape if needed (for neural networks)\n",
+    "# X_train = X_train.reshape(-1, 28*28)  # Flatten the images\n",
+    "# X_test = X_test.reshape(-1, 28*28)\n",
+    "\n",
+    "# print(X_test[0])\n",
+    "\n",
+    "andx = NN(layers=layers, initial_x=len(dataset[0][0]), \n",
+    "         loss_func=CE,loss_der=CEDer, forward_funcs=forward_funcs, neurons_per_layer=10, backward_func=backward_funcs)\n",
+    "\n",
+    "andx.train(dataset, lr=0.1)\n",
+    "\n",
+    "andx.test(dataset)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## OR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1] [1.] [9.99200722e-16]\n",
+      "[0, 0] [0.00025011] [0.00025014]\n",
+      "[1, 0] [0.99986308] [0.00013693]\n",
+      "[0, 1] [0.99992284] [7.71624127e-05]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = [[[1,1],1], [[0,0],0], [[1,0],1], [[0,1],1]]\n",
+    "\n",
+    "layers = 5\n",
+    "forward_funcs = [sRel for i in range(layers - 1)]\n",
+    "forward_funcs.append(sig)\n",
+    "\n",
+    "backward_funcs = [sRelDer for i in range(layers - 1)]\n",
+    "backward_funcs.append(sigDer)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# (x_train, y_train), (x_test, y_test) = keras.datasets.mnist.load_data()\n",
+    "\n",
+    "# X_train = x_train / 255.0\n",
+    "# X_test = x_test / 255.0\n",
+    "\n",
+    "# # Reshape if needed (for neural networks)\n",
+    "# X_train = X_train.reshape(-1, 28*28)  # Flatten the images\n",
+    "# X_test = X_test.reshape(-1, 28*28)\n",
+    "\n",
+    "# print(X_test[0])\n",
+    "\n",
+    "orx = NN(layers=layers, initial_x=len(dataset[0][0]), \n",
+    "         loss_func=CE,loss_der=CEDer, forward_funcs=forward_funcs, neurons_per_layer=10, backward_func=backward_funcs)\n",
+    "\n",
+    "orx.train(dataset, lr=0.1)\n",
+    "\n",
+    "orx.test(dataset)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## XOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 1] [0.00027077] [0.00027081]\n",
+      "[0, 0] [3.10789393e-05] [3.10794223e-05]\n",
+      "[1, 0] [1.] [9.99200722e-16]\n",
+      "[0, 1] [0.99947854] [0.0005216]\n"
+     ]
+    }
+   ],
+   "source": [
     "dataset = [[[1,1],0], [[0,0],0], [[1,0],1], [[0,1],1]]\n",
     "\n",
     "layers = 5\n",
@@ -196,14 +316,25 @@
     "backward_funcs = [sRelDer for i in range(layers - 1)]\n",
     "backward_funcs.append(sigDer)\n",
     "\n",
-    "nur = NN(layers=layers, initial_x=len(dataset[0][0]), \n",
+    "\n",
+    "\n",
+    "# (x_train, y_train), (x_test, y_test) = keras.datasets.mnist.load_data()\n",
+    "\n",
+    "# X_train = x_train / 255.0\n",
+    "# X_test = x_test / 255.0\n",
+    "\n",
+    "# # Reshape if needed (for neural networks)\n",
+    "# X_train = X_train.reshape(-1, 28*28)  # Flatten the images\n",
+    "# X_test = X_test.reshape(-1, 28*28)\n",
+    "\n",
+    "# print(X_test[0])\n",
+    "\n",
+    "xor = NN(layers=layers, initial_x=len(dataset[0][0]), \n",
     "         loss_func=CE,loss_der=CEDer, forward_funcs=forward_funcs, neurons_per_layer=10, backward_func=backward_funcs)\n",
     "\n",
-    "nur.train(dataset, lr=0.1)\n",
+    "xor.train(dataset, lr=0.1)\n",
     "\n",
-    "nur.test(dataset)\n",
-    "\n",
-    "\n"
+    "xor.test(dataset)\n"
    ]
   },
   {
